--- a/TradeAnalysis/templates/analysis.html
+++ b/TradeAnalysis/templates/analysis.html
@@ -129,7 +129,7 @@
                               <!-- Card Header - Dropdown -->
                               <div
                                   class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                  <h6 class="m-0 font-weight-bold text-primary">Asset Allocation</h6>
+                                  <h5 class="m-0 font-weight-bold text-info">Asset Allocation</h5>
                                   
                               </div>
                               <!-- Card Body -->
@@ -163,7 +163,7 @@
                             <!-- Card Header - Dropdown -->
                             <div
                                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Winning % by days</h6>
+                                <h5 class="m-0 font-weight-bold text-info">Winning % by days</h5>
                                 
                             </div>
                             <!-- Card Body -->
@@ -184,7 +184,7 @@
                             <!-- Card Header - Dropdown -->
                             <div
                                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Revenue Sources</h6>
+                                <h5 class="m-0 font-weight-bold text-info">Trades Per Day</h5>
                                 
                             </div>
                             <!-- Card Body -->
