--- a/static/TradeStyle.css
+++ b/static/TradeStyle.css
@@ -89,3 +89,100 @@ body{
         margin-left: 0%;
     }
   }
+  .container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%
+}
+
+@media (min-width:576px) {
+    .container {
+        max-width: 540px
+    }
+}
+
+@media (min-width:768px) {
+    .container {
+        max-width: 720px
+    }
+}
+
+@media (min-width:992px) {
+    .container {
+        max-width: 960px
+    }
+}
+
+@media (min-width:1200px) {
+    .container {
+        max-width: 1140px
+    }
+}
+
+.container-fluid {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%
+}
+@media all and (max-width:1200px) {
+    body.open header {
+        background: #1d1638
+    }
+
+    header #mobilemenu {
+        display: block;
+        margin-bottom: 30px
+    }
+
+    header .col-md-9 {
+        position: initial
+    }
+
+    header .col-md-9 .menu-main-menu-container ul#menu-main-menu li.mbclose {
+        display: initial;
+        text-align: right
+    }
+
+    header .col-md-9 .menu-main-menu-container {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: #1d1638;
+        z-index: 9
+    }
+
+    header .col-md-9 .menu-main-menu-container ul#menu-main-menu {
+        height: 100%;
+        margin-top: 22px
+    }
+
+    body.admin-bar header .col-md-9 .menu-main-menu-container ul#menu-main-menu {
+        margin-top: 69px
+    }
+
+    header .col-md-9 .menu-main-menu-container ul#menu-main-menu li {
+        display: block;
+        padding: 10px 20px;
+        text-align: center
+    }
+
+    header .col-md-9 .menu-main-menu-container ul#menu-main-menu li:last-child {
+        padding-bottom: 20px
+    }
+
+    header .col-md-9 .menu-main-menu-container ul#menu-main-menu li a {
+        font-size: 25px
+    }
+}
+header #menu-main-menu li.signup a:hover {
+    color: #0F1014;
+    background: #00FFB3
+}
