--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,76 @@
 {% endblock title %}
 
 {% block body %}
-     <h1> Manali Joshi</h1>
-     <h3>MSc Final Year</h3>   
-{% endblock body %}
+   <body>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 mb-4">
+				<div class="card">
+					<img class="card-img-top" src="" alt="">
+
+					<div class="card-body">
+						<h5 class="card-title">Manali Joshi</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Msc Final Year</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Roll No. :1123</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Email Id: manalijoshi0707@gmail.com</h6>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6 mb-4">
+				<div class="card">
+					<img class="card-img-top" src="" alt="">
+
+					<div class="card-body">
+						<h5 class="card-title">Manali Joshi</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Msc Final Year</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Roll No. :1123</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Email Id: manalijoshi0707@gmail.com</h6>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+			integrity=
+"sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+			crossorigin="anonymous">
+	</script>
+
+	<script src=
+"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+			integrity=
+"sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+			crossorigin="anonymous">
+	</script>
+
+	<script src=
+"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+			integrity=
+"sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+			crossorigin="anonymous">
+	</script>
+
+     <br>
+     <div class="container">
+		<div class="row">
+			<div class="mx-auto mb-4">
+				<div class="card">
+					<img class="card-img-top" src="" alt="">
+
+					<div class="card-body">
+						<h5 class="card-title">Manali Joshi</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Msc Final Year</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Roll No. :1123</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Email Id: manalijoshi0707@gmail.com</h6>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+
+
+        {% endblock body %}
