--- a/templates/about.html
+++ b/templates/about.html
@@ -25,10 +25,10 @@
 					<img class="card-img-top" src="" alt="">
 
 					<div class="card-body">
-						<h5 class="card-title">Manali Joshi</h5>
+						<h5 class="card-title">Ashiwini Solanki</h5>
                               <h6 class="card-subtitle mb-2 text-muted">Msc Final Year</h6>
-                              <h6 class="card-subtitle mb-2 text-muted">Roll No. :1123</h6>
-                              <h6 class="card-subtitle mb-2 text-muted">Email Id: manalijoshi0707@gmail.com</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Roll No. :61</h6>
+                              <h6 class="card-subtitle mb-2 text-muted">Email Id: ashiwinisolanki2331@gmail.com</h6>
 					</div>
 				</div>
 			</div>
@@ -58,7 +58,7 @@
 	</script>
 
      <br>
-     <div class="container">
+     {% comment %} <div class="container">
 		<div class="row">
 			<div class="mx-auto mb-4">
 				<div class="card">
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> {% endcomment %}
 </body>
 
 
