--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
           <li id="menu-item-7" class="menu menu-item menu-item-type-custom menu-item-object-custom menu-item-7"><a href="{% url 'tradesheet' %}">TradeSheet</a></li>
           <li id="menu-item-480" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-480"><a href="{% url 'tradeAnalysis' %}">Analysis</a></li>
           &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-          <li> {{user.id}}{{user.first_name}}</li>
+          <li> {{user.first_name}}</li>
           
           <li id="menu-item-1119" class="signup menu-item menu-item-type-custom menu-item-object-custom menu-item-1119"><a href="{% url 'logout'%}">Logout</a></li>
        
