--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
               </div>
             </main>
           </div>
-          <div class="container">
+          {% comment %} <div class="container">
                <div class="row">
                     <div class=" col-lg-6 mx-auto mb-4">
                          <div class="card">
@@ -72,7 +72,7 @@
                          </div>
                     </div>
                </div>
-          </div>
+          </div> {% endcomment %}
           <div id="primary" class="content-area" >
                <main id="main" class="site-main">
                  <div class="container">
