--- a/TradeAnalysis/templates/analysis.html
+++ b/TradeAnalysis/templates/analysis.html
@@ -196,7 +196,7 @@
                             <!-- Card Header - Dropdown -->
                             <div
                                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h5 class="m-0 font-weight-bold text-info">Winning % by days</h5>
+                                <h5 class="m-0 font-weight-bold text-info">Winning trades by days</h5>
                                 
                             </div>
                             <!-- Card Body -->
@@ -206,7 +206,20 @@
                         </div> 
                     </div> 
 
-                    
+                    <div class="col-xl-6 col-lg-5">
+                        <div class="card shadow mb-4">
+                            <!-- Card Header - Dropdown -->
+                            <div
+                                class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <h5 class="m-0 font-weight-bold text-info">Profit Loss Per Share</h5>
+                                
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                {{profit_loss_per_share | safe}} 
+                            </div>
+                        </div> 
+                    </div> 
                   </div>
 
 
